[#12558] refactor(lance): Reuse shared metadata authorization